force-app/main/default/objects/Case/fields/Is_follow_up_required__c.field-meta.xml
<CustomField>
    <fullName>Is_follow_up_required__c</fullName>
    <label>Does EDF need to follow up?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>