force-app/main/default/objects/Case/recordTypes/Member_Services.recordType-meta.xml
<RecordType>
    <fullName>Member_Services</fullName>
    <active>true</active>
    <businessProcess>EDF Member Services</businessProcess>
    <label>Member Services</label>
</RecordType>