force-app/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>