force-app/main/default/objects/Case/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.REASON</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>11/29/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>ghali</value>
    </filters>
    <label>All Closed Cases</label>
</ListView>