force-app/main/default/objects/Case/listViews/All_Member_Services_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Member_Services_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Escalated</value>
    </filters>
    <label>All Member Services Open Cases</label>
    <queue>MemberServicesEscalationQueue</queue>
    <sharedTo>
        <group>MemberServices</group>
    </sharedTo>
</ListView>