force-app/main/default/objects/Case/listViews/All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Escalated</value>
    </filters>
    <label>All Open Cases</label>
</ListView>