force-app/main/default/objects/Case/listViews/DonorRecordsRequests_Case.listView-meta.xml
<ListView>
    <fullName>DonorRecordsRequests_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Donor Records Requests</label>
    <queue>DonorRecordsRequests</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>