force-app/main/default/objects/Case/listViews/MatchingGiftsRequests_Case.listView-meta.xml
<ListView>
    <fullName>MatchingGiftsRequests_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Matching Gifts Requests</label>
    <queue>MatchingGiftsRequests</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>