force-app/main/default/objects/Case/listViews/Member_Services_Escalation_Queue.listView-meta.xml
<ListView>
    <fullName>Member_Services_Escalation_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Member Services Escalation Queue</label>
    <queue>MemberServicesEscalationQueue</queue>
    <sharedTo>
        <group>MemberServices</group>
        <group>Membership</group>
    </sharedTo>
</ListView>