force-app/main/default/objects/Case/listViews/MemberServicesEscalationQueue_Case.listView-meta.xml
<ListView>
    <fullName>MemberServicesEscalationQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Member Services Escalation Queue</label>
    <queue>MemberServicesEscalationQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>