force-app/main/default/objects/Case/listViews/PlannedGivingInquiries_Case.listView-meta.xml
<ListView>
    <fullName>PlannedGivingInquiries_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Planned Giving Inquiries</label>
    <queue>PlannedGivingInquiries</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>