force-app/main/default/objects/Case/listViews/StockGiftsRequests_Case.listView-meta.xml
<ListView>
    <fullName>StockGiftsRequests_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Stock Gifts Requests</label>
    <queue>StockGiftsRequests</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>