force-app/main/default/objects/Case/listViews/SustainerInquiries_Case.listView-meta.xml
<ListView>
    <fullName>SustainerInquiries_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Sustainer Inquiries</label>
    <queue>SustainerInquiries</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>